# nsh

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  book.toml  build.rs  run-tests.py  test.py  test.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml
config/: README.md  dev.js  main.js  package.json
config/ui/: app.vue  index.html
config/ui/components/: prompt.vue  rc.vue
docs/: README.md  SUMMARY.md  changelog.md  compatibility.md  completion.md  debugging.md  getting_started.md  history.md  internals.md  key_bindings.md  nsh_history.md  nshrc.md  prompt.md
src/: alias.rs  bash_server.rs  builtins.rs  completion.rs  config.rs  context_parser.rs  dircolor.rs  doctor.rs  eval.rs  exec.rs  expand.rs  fuzzy.rs  highlight.rs  history.rs  input.rs  internals.rs  invoke-bash-completion.sh  logger.rs  macros.rs  main.rs  mainloop.rs  parser.rs  path.rs  path_loader.rs  pattern.rs  process.rs  prompt.pest  prompt.rs  shell.pest  shell.rs  syntax_highlighting.rs  theme.rs  utils.rs  variable.rs  worker.rs
src/builtins/: alias.pest  alias.rs  bg.rs  cd.rs  compgen.rs  complete.rs  echo.rs  eval.rs  exec.rs  exit.rs  export.rs  fg.rs  jobs.rs  mod.rs  nsh_config.rs  popd.rs  pushd.rs  read.rs  rehash.rs  set.rs  shift.rs  source.rs  unset.rs  wait.rs
src/common/: Cargo.toml  dirs.rs  lib.rs  logger.rs  oops.rs  time_report.rs
src/common/collections/: fuzzy_set.rs  mod.rs  prioritized_vec.rs
src/compinfer/: Cargo.toml
src/completion/: Cargo.toml  completion.rs  lib.rs  man.rs
src/config/: mod.rs  server.rs
src/config/ui/: .gitignore  README.md  dev-server.js  package.json
src/config/ui/src/: app.vue  index.html  index.ts
src/config/ui/src/components/: env.vue  migration.vue  prompt.vue  rc.vue
src/nsh/: Cargo.toml  main.rs
src/parser/: Cargo.toml  ast.rs  highlight.rs  lexer.rs  lib.rs  parser.rs
src/parser/tests/: lexer_test.rs  parser_test.rs
src/shell/: Cargo.toml  exec.rs  expand.rs  job.rs  lib.rs  main.rs  path_table.rs  shell.rs
test/: README.md  arith_for.sh  array.sh  array.stdout  builtins.sh  builtins.sh.source  builtins.stderr  builtins.stdout  case.sh  case.stdout  cond_ex.sh  cond_ex.stdout  exec.sh  exec.stdout  expansions.sh  expansions.stdout  export.sh  for.sh  for.stdout  func.sh  func.stdout  heredoc.sh  heredoc.stderr  if.sh  if.stdout  oneliners.sh  oneliners.stdout  pipelines.sh  pipelines.stdout  proc-subst.sh  proc-subst.stdout  read.sh  read.stdout  redirections.sh  redirections.stdout  special_vars.sh  special_vars1.sh  special_vars2.sh  special_vars2.stdout  variable.sh  (+5 more)
test/options/: REDAME.md  errexit.sh  noexec.sh  noexec.stdout  nounset.sh  nounset.stderr  nounset.stdout
test/parsers/: cmd_starts_with_keyword.sh  cmd_starts_with_keyword.stderr
test/playground/: README.md
tools/: run-blackbox-tests.py
