[package]
name = "nsh"
version = "0.0.1"
authors = ["Seiya Nuta <nuta@seiya.me>"]
edition = "2018"
description = "A command-line shell written in Rust that focuses on performance and productivity."
license = "CC0-1.0 OR MIT"
repository = "https://github.com/seiyanuta/nsh"
include = [
    "src/config/ui/build/*.js",
    "src/config/ui/build/*.html",
    "src/config/ui/build/*.css",
    "src/config/ui/build/*.map",
    "**/*.rs",
    "**/*.pest",
    "Cargo.toml",
]

[dependencies]
lazy_static = "1"
log = { version = "*", features = ["max_level_trace", "release_max_level_warn"] }
nix = "^0.12"
libc = "*"
dirs = "1"
syntect = "3"
crossbeam = "0.5"
crossbeam-channel = "0.3"
structopt = "0.2"
glob = "0.2"
globset = "0.4"
serde = "1"
serde_json = "1"
serde_derive = "1"
failure = "0.1"
pest = "2"
pest_derive = "2"
backtrace = "0.3"

# nsh --config dependecies
iron = "0.6"
router = "*"
params = "*"
rand = "0.6"

# The latest version published to the crates.io does not include
# a bug fix to DetectCursorPos: https://github.com/redox-os/termion/pull/145
[dependencies.termion]
git = "https://gitlab.redox-os.org/redox-os/termion"
rev = "ce6b43d071cd6edfc4b366bb945b45e06c239e2c"
