[package]
name = "nsh"
version = "0.1.4"
authors = ["Seiya Nuta <nuta@seiya.me>"]
edition = "2018"
description = "A command-line shell written in Rust that focuses on performance and productivity."
keywords = ["shell"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "CC0-1.0 OR MIT"
repository = "https://github.com/seiyanuta/nsh"
include = [
    "**/*.rs",
    "**/*.pest",
    "Cargo.toml",
]

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false

[dependencies]
lazy_static = "1"
log = { version = "^0.4.6", features = ["max_level_trace", "release_max_level_warn"] }
nix = "^0.12"
libc = "0.2"
dirs = "1"
structopt = "0.2"
glob = "0.2"
failure = "0.1"
pest = "2.1"
pest_derive = "2.1"
backtrace = "0.3"
termion = "^1.5.1"

[dev-dependencies]
pretty_assertions = "0"
