[package]
name = "nsh_common"
version = "0.0.0"
authors = ["Seiya Nuta <nuta@seiya.me>"]
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
backtrace = "0"
log = "0"
fern = "0"
anyhow = "1"
dirs = "3"
serde = { version = "1.0", features = ["derive"] }
fxhash = "0"
once_cell = "1"
rayon = "1"
fuzzy-matcher = "0"
