[package]
name = "nsh"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "nsh"
path = "main.rs"

[dependencies]
log = "0"
anyhow = "1"
clap = { version = "3", features = ["derive"] }

nsh_shell = { path = "../shell" }
nsh_completion = { path = "../completion" }

[dev-dependencies]
pretty_assertions = "1"
